--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -36,25 +36,29 @@
         <div class="modal-body">
           <form name="reserve" action="index.html" method="get" onsubmit="return validate();" id="myForm">
             <div class="formData">
-              <label>Prénom</label><br>
+              <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2"/><br>
-              <span id="erreurfirst"></span><br>
+              <span class="error" id="errorfirst"></span><br>
             </div>
             <div class="formData">
-              <label>Nom</label><br>
+              <label for="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last"/><br>
+              <span class="error" id="errorlast"></span><br>
             </div>
             <div class="formData">
-              <label>E-mail</label><br>
+              <label for="email">E-mail</label><br>
               <input class="text-control" type="email" id="email" name="email"/><br>
+              <span class="error" id="erroremail"></span><br>
             </div>
             <div class="formData">
-              <label>Date de naissance</label><br>
+              <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate"/><br>
+              <span class="error" id="errorbirthdate"></span><br>
             </div>
             <div class="formData">
-              <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <span class="error" id="errorquantity"></span><br>
             </div>
             <p class="text-label">Quelles villes ?</p>
             <div class="formData">
@@ -77,7 +81,7 @@
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
               <label class="checkbox2-label" for="checkbox2"><span class="checkbox-icon"></span>Je souhaite être prévenu des prochains évènements.</label><br>
             </div>
-            <input class="btn-submit" type="submit" class="button" value="C'est parti"/>
+            <input class="btn-submit" type="submit" class="button" value="C'est parti" id="sub-btn"/>
           </form>
         </div>
       </div>
