--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Reservation</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="modal.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <title>Reservation</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="modal.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet"/>
 </head>
 <body>
   <div class="topnav" id="myTopnav">
@@ -32,9 +32,9 @@
     </div>
     <div class="bground">
       <div class="content">
-        <span class="close"></span>
+        <span class="close" id="closeform"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="get" onsubmit="return validate();" id="myForm">
+          <form name="reserve" action="index.html" method="get" id="myform">
             <div class="formData">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2"/><br>
@@ -57,10 +57,10 @@
             </div>
             <div class="formData">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99"><br>
               <span class="error" id="errorquantity"></span><br>
             </div>
-            <p class="text-label">Quelles villes ?</p>
+            <p class="text-label"  id="location">Quelles villes ?</p>
             <div class="formData">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
               <label class="checkbox-label" for="location1"><span class="checkbox-icon"></span>New York</label>
@@ -74,10 +74,12 @@
               <label class="checkbox-label" for="location5"><span class="checkbox-icon"></span>Boston</label>
               <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland"/>
               <label class="checkbox-label" for="location6"><span class="checkbox-icon"></span>Portland</label>
+              <span class="error" id="errorlocation"></span>
             </div>
             <div class="formData">
               <input class="checkbox-input" type="checkbox" id="checkbox1" checked/>
-              <label class="checkbox2-label" for="checkbox1" required><span class="checkbox-icon"></span>J'ai lu et accepté les conditions d'utilisation.</label><br>
+              <label class="checkbox2-label" for="checkbox1" required id="checkbox1_label"><span class="checkbox-icon"></span>J'ai lu et accepté les conditions d'utilisation.</label><br>
+              <span class="error" id="errorcheckbox1"></span><br>
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
               <label class="checkbox2-label" for="checkbox2"><span class="checkbox-icon"></span>Je souhaite être prévenu des prochains évènements.</label><br>
             </div>
