--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -30,7 +30,7 @@
       <div class="hero-img"><img src="./bg_img.jpg" alt="img" /></div>
       <button class="btn-signup modal-btn">je m'inscris</button>
     </div>
-    <div class="bground">
+    <div class="bground hide">
       <div class="content">
         <span class="close" id="closeform"></span>
         <div class="modal-body">
@@ -60,7 +60,7 @@
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99"><br>
               <span class="error" id="errorquantity"></span><br>
             </div>
-            <p class="text-label"  id="location">Quelles villes ?</p>
+            <p class="text-label"  id="locationText">Quelles villes ?</p>
             <div class="formData">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
               <label class="checkbox-label" for="location1"><span class="checkbox-icon"></span>New York</label>
@@ -88,7 +88,7 @@
         </div>
       </div>
     </div>
-    <div class="bground-thank">
+    <div class="bground-thank hide">
       <div class="content-thank">
         <span class="close" id="closethanks"></span>
         <div class="thank-body">
