--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -35,31 +35,37 @@
         <span class="close" id="closeform"></span>
         <div class="modal-body">
           <form name="reserve" action="index.html" method="get" id="myform">
+            <!-- le prenom -->
             <div class="formData">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2"/><br>
               <span class="error" id="errorfirst"></span><br>
             </div>
+            <!-- le nom -->
             <div class="formData">
               <label for="last">Nom</label><br>
               <input class="text-control" type="text" id="last" name="last"/><br>
               <span class="error" id="errorlast"></span><br>
             </div>
+            <!-- L'adresse mail -->
             <div class="formData">
               <label for="email">E-mail</label><br>
               <input class="text-control" type="email" id="email" name="email"/><br>
               <span class="error" id="erroremail"></span><br>
             </div>
+            <!-- La date de naissance -->
             <div class="formData">
               <label for="birthdate">Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate"/><br>
               <span class="error" id="errorbirthdate"></span><br>
             </div>
+            <!-- Le nombre de tournois -->
             <div class="formData">
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
               <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99"><br>
               <span class="error" id="errorquantity"></span><br>
             </div>
+            <!-- Choix de la ville -->
             <p class="text-label"  id="locationText">Quelles villes ?</p>
             <div class="formData">
               <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
@@ -76,6 +82,7 @@
               <label class="checkbox-label" for="location6"><span class="checkbox-icon"></span>Portland</label>
               <span class="error" id="errorlocation"></span>
             </div>
+            <!-- Acceptation des conditions -->
             <div class="formData">
               <input class="checkbox-input" type="checkbox" id="checkbox1" checked/>
               <label class="checkbox2-label" for="checkbox1" required id="checkbox1_label"><span class="checkbox-icon"></span>J'ai lu et accepté les conditions d'utilisation.</label><br>
@@ -88,6 +95,7 @@
         </div>
       </div>
     </div>
+    <!-- Message de remerciement après validation du formulaire -->
     <div class="bground-thank hide">
       <div class="content-thank">
         <span class="close" id="closethanks"></span>
