--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -84,7 +84,7 @@
             </div>
             <!-- Acceptation des conditions -->
             <div class="formData">
-              <input class="checkbox-input" type="checkbox" id="checkbox1" checked/>
+              <input class="checkbox-input" type="checkbox" id="checkbox1"/>
               <label class="checkbox2-label" for="checkbox1" required id="checkbox1_label"><span class="checkbox-icon"></span>J'ai lu et accepté les conditions d'utilisation.</label><br>
               <span class="error" id="errorcheckbox1"></span><br>
               <input class="checkbox-input" type="checkbox" id="checkbox2" />
